--- a/documentation.html
+++ b/documentation.html
@@ -287,7 +287,7 @@
                     <p><b>Provenance</b>: http://ghdx.healthdata.org/gbd-results-tool</p>
 
                   <h5 style="color: #20c997;">World Health Organization:</h5>
-                    <p><b>Format</b>: pdf, png, csv.</p>
+                    <p><b>Format</b>: csv.</p>
                     <p><b>Metadata</b>: WHO provides many metadata including those about indicator names, short names, data type, indicator Id, topics, method of measurement, method of estimation, and unit of measure.</p>
                     <p><b>URI</b>: https://www.who.int/data/gho/data/indicators/indicator-details/GHO/mortality-rate-for-5-14-year-olds-(probability-of-dying-per-1000-children-aged-5-14-years)</p>
                     <p><b>Provenance</b>: https://www.who.int/data/gho/data/indicators/indicator-details/GHO/mortality-rate-for-5-14-year-olds-(probability-of-dying-per-1000-children-aged-5-14-years)</p>
