--- a/documentation.html
+++ b/documentation.html
@@ -312,7 +312,7 @@
 
                   <h5 style="color: #20c997;">UN IGME:</h5>
                     <p><b>Format</b>: csv.</p>
-                    <p><b>Metadata</b>: no metadata available..</p>
+                    <p><b>Metadata</b>: no metadata available.</p>
                     <p><b>URI</b>: https://childmortality.org/data</p>
                     <p><b>Provenance: https://childmortality.org/data</b></p>
 
