--- a/documentation.html
+++ b/documentation.html
@@ -343,10 +343,10 @@
                   <h5 style="color: #20c997;">Reusable:</h5>
                   <p>the ultimate goal of FAIR is to optimise the reuse of data. To achieve this, metadata and data should be well-described so that they can be replicated and/or combined in different settings.</p>
                   <p>R1. Meta(data) are richly described with a plurality of accurate and relevant attributes: our data and metadata are described through a rich and vary series of labels including the date of collection and modification of the data, the licence, the publisher, the creator, their content.</p>
-                  <p>R1.1. (Meta)data are released with a clear and accessible data usage license: all data we used were released with the specification of the usage license except for those from the UNHCR and UCDP. License in specified for the dataset and respective metadata we created (Creative Common License CC BY 4.0).</p>
-                  <p>R1.2. (Meta)data are associated with detailed provenance: our project includes information about the provenance of data in a machine-readable format in the metadata codification. The website presents also a description of the workflow that led to your data.</p>
+                  <p>R1.1. (Meta)data are released with a clear and accessible data usage license (Creative Common License CC BY-SA 4.0).
+                  <p>R1.2. (Meta)data are associated with detailed provenance: our project includes information about the provenance of data in a machine-readable format in the metadata codification.</p>
                   <p>R1.3. (Meta)data meet domain-relevant community standards: we used the ISO standard for geographic information.</p>
-                  <p>The principles mentioned above include three types of entities: data, metadata and infrastructure. Given the analysis, we can state that our research data are almost 100% compliant with the FAIR principles, with the few exceptions due to the lack of license specification.</p>
+                  <p>The principles mentioned above include three types of entities: data, metadata and infrastructure. Given the analysis, we can state that our research data are 100% compliant with the FAIR principles.</p>
 
                   <h4>Sustainability</h4>
                   <p>The NutriData dataset contains data that derive from different sources, concerning all the factors involved in the topic about children malnutrition:
