--- a/metadata.html
+++ b/metadata.html
@@ -80,8 +80,9 @@
       <div class="row">
 
 
-        <div class="col-sm-4 col-md-4 col-lg-4 col">
+        <div class="col-sm-4 col-md-4 col-lg-4">
           <div class="index-ul">
+            <div class="col-10">
             <ul class="no-bullets">
               <li>Datasets: </li>
               <li><a href="#nutridef">Nutritional Deficiencies and Related Diseases</a></li>
@@ -93,6 +94,7 @@
               <li><a href="#nutrical">Daily per capita Supply of Kilocalories</a></li>
               <li><a target="_blank" href="#checklist">Download Checklist and RDF assertion of the metadata</a></li>
             </ul>
+          </div>
           </div>
         </div>
         <div class="col-sm-8 col-md-8 col-lg-8 col">
@@ -171,7 +173,7 @@
                     <p class="card-text"><span class="category">Temporal Coverage</span>: 2010-2018</p>
                     <p class="card-text"><span class="category">Spatial Coverage</span>: World</p>
                     <p class="card-text"><span class="category">URL</span>: https://aschimmenti.github.io/NutriData/</p>
-                    <p class="card-text"><span class="category">Licence</span>: CC-BY-SA 4.0</p>
+                    <p class="card-text"><span class="category">Licence</span>: CC-BY-SA 4.0 (IHME), 3.0 (WHO)</p>
 
                     <p class="card-text"><span class="category">Status</span>: Completed</p>
                     <a class="btn btn-primary" href="datasets/mortality.csv" download>Download .csv</a>
