--- a/metadata.html
+++ b/metadata.html
@@ -92,7 +92,7 @@
               <li><a href="#nutrigdp">GDP per capita Dataset</a></li>
               <li><a href="#nutrind">Food Security Indicators</a></li>
               <li><a href="#nutrical">Daily per capita Supply of Kilocalories</a></li>
-              <li><a target="_blank" href="#checklist">Download Checklist and RDF assertion of the metadata</a></li>
+              <li><a href="#checklist">Download Checklist and RDF assertion of the metadata</a></li>
             </ul>
           </div>
           </div>
